--- a/index.html
+++ b/index.html
@@ -14,331 +14,9 @@
 </head>
 
 <body>
-    <nav>
-        <button type="button" class="navbar-toggler" id="navbar=toggler" onclick="toggler()">
-            <div class="toggler-icon"></div>
-            <div class="toggler-icon"></div>
-            <div class="toggler-icon"></div>
-        </button>
-        <a href="#"><img class="navbar-logo" src="assets/img/logo-vairbees.png"></a>
-        <a href="#"><img class="navbar-profile" src="assets/img/profile.png"></a>
-    </nav>
-
-    <div class="container" id="container">
-        <div class="sidebar" id="sidebar">
-            <div class="role">
-                <div class="role-header">
-                    <div style="font-size: 15px;">Role</div>
-                    <button class="role-button">CHANGE</button>
-                </div>
-                <div style="font-size: 16px; margin-top: 30px;">Staff</div>
-                <div style="font-size: 14px;">Vairbees</div>
-                <div style="font-size: 14px;">BINUS UNIVERSITY</div>
-            </div>
-            <ul>
-                <li class="nav-item"><a class="nav-link active" href="index.html">
-                    <img class="icon" src="assets/img/icon-dashboard.png">
-                    Dashboard
-                    </a>
-                </li>
-            </ul>
-        </div>
-    
-        <div class="main">
-            <div class="section">
-                <div class="subtitle">
-                    Overview
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total page view
-                            </div>
-                            <div class="card-body large" id="displayPageview">
-                                800.000
-                            </div>
-                            <div class="card-footer">
-                                <div class="green">
-                                    <i class="fas fa-long-arrow-alt-up"></i> 5.0%
-                                </div>
-                                Since last month
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total user
-                            </div>
-                            <div class="card-body large" id="displayUser">
-                                80.000
-                            </div>
-                            <div class="card-footer">
-                                <div class="green">
-                                    <i class="fas fa-long-arrow-alt-up"></i> 2.13%
-                                </div>
-                                Since last month
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total session
-                            </div>
-                            <div class="card-body large" id="displayTotalSession">
-                                32.500
-                            </div>
-                            <div class="card-footer">
-                                <div class="green">
-                                    <i class="fas fa-long-arrow-alt-up"></i> 3.0%
-                                </div>
-                                Since last month
-                            </div>
-                        </div> 
-                    </div>
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total avg visit time
-                            </div>
-                            <div class="card-body large" >
-                                <span id="displayAvgVisit">160</span> S
-                            </div>
-                            <div class="card-footer">
-                                <div class="red">
-                                    <i class="fas fa-long-arrow-alt-down"></i> 1.4%
-                                </div>
-                                Since last month
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="subtitle">
-                    User Behaviour
-                </div>
-    
-                <div class="card-wrapper">
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Page view
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                User
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart2"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Session
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart3"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Avg visit time
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart4"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                User devices
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart5"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Top country
-                            </div>
-                            <div class="card-body">
-                                <div class="table-wrapper">
-                                    <table>
-                                        <tr>
-                                        <th>No</th>
-                                        <th>Country</th>
-                                        <th>Users</th>
-                                        </tr>
-                                        <tr>
-                                        <td>1</td>
-                                        <td>Indonesia</td>
-                                        <td>93%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>United States</td>
-                                            <td>2.9%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Singapore</td>
-                                            <td>2.5%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>South Korea</td>
-                                            <td>1.3%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Japan</td>
-                                            <td>0.3%</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="section">
-                <div class="subtitle">
-                    List of all events
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-search">
-                                <div class="entries">
-                                    Show 
-                                    <select class="form-select">
-                                        <option value="10" selected>10</option>
-                                        <option value="25">25</option>
-                                        <option value="50">50</option>
-                                        <option value="100">100</option>
-                                    </select>
-                                    entries
-                                </div>
-                                <div class="search">
-                                    <input class="form-control" type="search" placeholder="Search">
-                                    <button type="submit" class="search-button">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="card-body list-events">
-                                <div class="table-wrapper">
-                                    <table>
-                                        <tr>
-                                            <th>No</th>
-                                            <th>Pages</th>
-                                            <th>Date</th>
-                                            <th>Total page view</th>
-                                            <th>Total user</th>
-                                            <th>Action</th>
-                                        </tr>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>PIT Virtual IAI 2022</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td>500.000</td>
-                                            <td>50.000</td>
-                                            <td><a href="view-event.html">View</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Bifest</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td>400.000</td>
-                                            <td>40.000</td>
-                                            <td><a href="">View</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Job Expo</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td>300.000</td>
-                                            <td>30.000</td>
-                                            <td><a href="">View</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>Internship Expo</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td>200.000</td>
-                                            <td>20.000</td>
-                                            <td><a href="">View</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Eduphoria</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td>100.000</td>
-                                            <td>10.000</td>
-                                            <td><a href="">View</a></td>
-                                        </tr>
-                                    </table> 
-                                </div>
-                            </div>
-                            <div class="card-footer view-all">
-                                VIEW ALL
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="section">
-                <button id="btn-access">Login</button>
-                <button id="btn-loadrep">Load Reports</button>
-            </div>
-        </div>
+    <div class="main-login">
+        <img class="logo" src="assets/img/logo.svg">
+        <button id="btn-access" class="login-button">Sign in with Google</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="assets/script.js"></script>
