--- a/dashboard.html
+++ b/dashboard.html
@@ -45,194 +45,6 @@
         </div>
     
         <div class="main">
-            <div class="section">
-                <div class="subtitle">
-                    Overview
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total page view
-                            </div>
-                            <div class="card-body large" id="displayPageview">
-                                800.000
-                            </div>
-                            <div class="card-footer">
-                                Since last month
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total user
-                            </div>
-                            <div class="card-body large" id="displayUser">
-                                80.000
-                            </div>
-                            <div class="card-footer">
-                                Since last month
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total session
-                            </div>
-                            <div class="card-body large" id="displayTotalSession">
-                                32.500
-                            </div>
-                            <div class="card-footer">
-                                Since last month
-                            </div>
-                        </div> 
-                    </div>
-                    <div class="card">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Total avg visit time
-                            </div>
-                            <div class="card-body large" >
-                                <span id="displayAvgVisit">160</span> S
-                            </div>
-                            <div class="card-footer">
-                                Since last month
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="subtitle">
-                    User Behaviour
-                </div>
-    
-                <div class="card-wrapper">
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Page view
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                User
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart2"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Session
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart3"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Avg visit time
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart4"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card-wrapper">
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                User devices
-                            </div>
-                            <div class="card-body">
-                                <div>
-                                    <canvas id="myChart5"></canvas>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card chart">
-                        <div class="card-inner">
-                            <div class="card-header">
-                                Top country
-                            </div>
-                            <div class="card-body">
-                                <div class="table-wrapper">
-                                    <table>
-                                        <tr>
-                                        <th>No</th>
-                                        <th>Country</th>
-                                        <th>Users</th>
-                                        </tr>
-                                        <tr>
-                                        <td>1</td>
-                                        <td>Indonesia</td>
-                                        <td>93%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>United States</td>
-                                            <td>2.9%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Singapore</td>
-                                            <td>2.5%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>South Korea</td>
-                                            <td>1.3%</td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Japan</td>
-                                            <td>0.3%</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <div class="section">
                 <div class="subtitle">
@@ -271,33 +83,21 @@
                                         </tr>
                                         <tr>
                                             <td>1</td>
-                                            <td>PIT Virtual IAI 2022</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td><a href="view-event.html">View</a></td>
+                                            <td>Rapat Koordinasi Nasional Farmalkes 2022</td>
+                                            <td>04 - 05 April 2022</td>
+                                            <td><a href="view-event-1.html">View</a></td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>Bifest</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td><a href="">View</a></td>
+                                            <td>UMKM Go Digital 2022 Virtual Expo</td>
+                                            <td>21 - 22 April 2022</td>
+                                            <td><a href="view-event-2.html">View</a></td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>Job Expo</td>
+                                            <td>PIT Virtual IAI 2022</td>
                                             <td>30 June - 2 July 2022</td>
-                                            <td><a href="">View</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>Internship Expo</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td><a href="">View</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Eduphoria</td>
-                                            <td>30 June - 2 July 2022</td>
-                                            <td><a href="">View</a></td>
+                                            <td><a href="view-event-3.html">View</a></td>
                                         </tr>
                                     </table> 
                                 </div>
