--- a/view-event.html
+++ b/view-event.html
@@ -44,7 +44,7 @@
     
         <div class="main">
             <div class="section">
-                <div class="back-nav" onclick="window.location='dashboard-vairbees.html'">
+                <div class="back-nav" onclick="window.location='dashboard.html'">
                     <span class="back">
                         <i class="fas fa-chevron-left"></i>
                     </span>
