--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Vairbees</title>
+    <title>Login - Dashboard Vairbees</title>
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/icons.css">
     <link rel="stylesheet" href="assets/style.css">
